<resources>
    <string name="app_name" translatable="false">Good Go</string>
    <string name="smb_site_url" translatable="false">https://www.savemybike.eu/</string>
    <string name="geosolutions_site_url" translatable="false">https://www.geo-solutions.it</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_stats">Stats</string>
    <string name="title_bikes">Bikes</string>
    <string name="state_started">Recording session</string>
    <string name="permission_location_required">The permission to acquire your location is required.</string>
    <string name="mode">Change Mode</string>
    <string name="stop">Stop</string>
    <string name="menu_simulate">Simulate</string>
    <string name="menu_wifi">Upload only with Wifi</string>
    <string name="login_button_text">Login</string>
    <string name="select_a_vehicle">Select a vehicle</string>
    <string name="simulation">simulation</string>
    <string name="mode_foot" translatable="false">mode foot</string>
    <string name="mode_train" translatable="false">mode train</string>
    <string name="record">record</string>
    <string name="mode_bike" translatable="false">mode bike</string>
    <string name="mode_moped" translatable="false">mode moped</string>
    <string name="mode_car" translatable="false">mode car</string>
    <string name="mode_bus" translatable="false">mode bus</string>
    <string name="retry_label">Retry</string>
    <string name="not_authorized">Ready to start your journey?</string>
    <string name="start_authorization">Sign in</string>
    <string name="logout_menu_text">Sign out</string>
    <string name="no_access_token_expiry" translatable="false">Access time has no defined expiry</string>
    <string name="access_token_expired" translatable="false">Access token has expired</string>
    <string name="auth_granted" translatable="false">Authorization granted</string>
    <string name="refresh_token" translatable="false">Refresh token</string>
    <string name="view_profile" translatable="false">View user info</string>
    <string name="access_token_expires_at" translatable="false">Access token expires at: %s</string>
    <string name="no_access_token_returned" translatable="false">No access token returned</string>
    <string name="no_refresh_token_returned" translatable="false">No refresh token returned</string>
    <string name="refresh_token_returned" translatable="false">Refresh token returned</string>
    <string name="no_id_token_returned" translatable="false">No ID token returned</string>
    <string name="id_token_returned" translatable="false">ID token returned</string>
    <string name="pt" translatable="false">PT</string>
    <string name="km" translatable="false">Km</string>
    <string name="session_type">session type</string>
    <string name="session_duration" translatable="false">session_duration</string>
    <string name="bike_name">bike name</string>
    <string name="logout_title">LOGOUT</string>
    <string name="logout_message">Do you really want to logout?</string>
    <string name="could_not_logout">Can not logout at the moment (Network connettivity is required). Please try again later.</string>
    <string name="logout_generic_issue">Can not logout at the moment. Please try again later.</string>
    <string name="logout_OK">LOGOUT</string>
    <string name="cancel">Cancel</string>
    <string name="type_your_message">Some additional details (optional):</string>
    <string name="exchanging_authorization_code">Exchanging authorization code</string>
    <string name="checking_user_data">Checking user data...</string>
    <string name="could_not_verify_user">Could not check user data. Please try again later</string>
    <string name="found_bike_message">Looks like you found your bike! Do you want to mark this bike as \"found\"?</string>
    <string name="lost_bike_message">You are about to report your bike as \"lost\", please add some details:</string>
    <string name="found_lost_bike_message">The owner of this bike has marked it as \"lost\". Do you want to notify him that you found it?</string>
    <string name="send">Send</string>
    <string name="lost_bike_report_title">Lost Bike Report</string>
	<string name="prizes_header">Prizes</string>
	<string name="sponsors_header">Sponsors</string>
    <string name="segments">Segments</string>
    <string name="track_details">Details</string>
    <string name="benefit_index">Benefit Index</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="calories_uom">cal</string>
    <string name="vehicles">Veichles</string>
    <string name="vehicle_foot">foot</string>
    <string name="vehicle_bike">bike</string>
    <string name="vehicle_moped">moped</string>
    <string name="vehicle_car">car</string>
    <string name="vehicle_bus">bus</string>
    <string name="vehicle_train">train</string>
    <string name="health_data">Health Data</string>
    <string name="loading">Loading...</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="emissions">Emissions</string>
    <string name="value">Value</string>
    <string name="saved">Saved</string>
    <string name="fuel">Fuel</string>
    <string name="costs_uom">€</string>
    <string name="costs">Costs</string>
    <string name="c_depreciation">Depreciation</string>
    <string name="c_operation">Operation</string>
    <string name="c_time">Moving time</string>
    <string name="total">Total</string>
    <string name="no_data">No Data</string>
    <string name="no_network">No Network</string>
    <string name="no_network_description">This functionality is not available offline. Please try again later</string>
    <string name="tracks">Tracks</string>
    <string name="sessions">To Send</string>
    <string name="session">Recording</string>
    <string name="delete_session">Delete recording</string>
    <string name="no_session_description">There is no recording to send. If you want to create a new recording use the \"Record\" tab</string>
    <string name="no__track_title">No Track Available</string>
    <string name="no_track_description">You don\'t have any track recorded. To create track, record using the \"Record\" tab first. At the end of the recording session, open the \"To Send\" tab in the \"Stats\" section and upload your data. You will see your data here after data processing end.</string>
    <string name="track_invalid_message_short">Invalid track.</string>
    <string name="track_invalid_message">This track has been identified as invalid. It will not be used in indexes count and assigning prizes</string>
    <string name="no_session_title">No Recording</string>
    <string name="no_bikes_title">No bikes</string>
    <string name="empty_bikes_description">You did not registered a bike yet. To register a bike access to your personal area of the portal.</string>
    <string name="open_the_portal">Open the portal</string>
    <string name="server_took_too_long_to_respond">Server took to much to respond</string>
    <string name="user_profile">User Profile</string>
    <string name="badges">Badges</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last  Name</string>
    <string name="email">email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Type your telephone number</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Write something about you...</string>
    <string name="badge_title_new_user">Nuovo Utente!! </string>
    <string name="badge_title_data_collector_level0">Rilevatore in erba!!</string>
    <string name="badge_title_data_collector_level1">Rilevatore – 1 stella!!</string>
    <string name="badge_title_data_collector_level2">Rilevatore – 2 stelle!!</string>
    <string name="badge_title_data_collector_level3">Rilevatore – 3 stelle!!</string>
    <string name="badge_title_biker_level1">Biker - 1 stella!!</string>
    <string name="badge_title_biker_level2">Biker - 2 stelle!!</string>
    <string name="badge_title_biker_level3">Biker - 3 stelle!!</string>
    <string name="badge_title_public_mobility_level1">Mobilità Collettiva – 1 stella!!</string>
    <string name="badge_title_public_mobility_level2">Mobilità Collettiva – 2 stelle!!</string>
    <string name="badge_title_public_mobility_level3">Mobilità Collettiva – 3 stelle!!</string>
    <string name="badge_title_bike_surfer_level1">Bike Surfer – 1 stella!!</string>
    <string name="badge_title_bike_surfer_level2">Bike Surfer – 2 stelle!!</string>
    <string name="badge_title_bike_surfer_level3">Bike Surfer – 3 stelle!!</string>
    <string name="badge_title_tpl_surfer_level1">TPL Surfer – 1 stella!!</string>
    <string name="badge_title_tpl_surfer_level2">TPL Surfer – 2 stelle!!</string>
    <string name="badge_title_tpl_surfer_level3">TPL Surfer – 3 stelle!!</string>
    <string name="badge_title_multi_surfer_level1">Multi Surfer – 1 stella!!</string>
    <string name="badge_title_multi_surfer_level2">Multi Surfer – 2 stelle!!</string>
    <string name="badge_title_multi_surfer_level3">Multi Surfer – 3 stelle!!</string>
    <string name="badge_title_ecologist_level1">Ecologista – 1 stella!!</string>
    <string name="badge_title_ecologist_level2">Ecologista – 2 stelle!!</string>
    <string name="badge_title_ecologist_level3">Ecologista – 3 stelle!!</string>
    <string name="badge_title_healthy_level1">Salutista – 1 stella!!</string>
    <string name="badge_title_healthy_level2">Salutista – 2 stelle!!</string>
    <string name="badge_title_healthy_level3">Salutista – 3 stelle!!</string>
    <string name="badge_title_money_saver_level1">Risparmiatore – 1 stella!!</string>
    <string name="badge_title_money_saver_level2">Risparmiatore – 2 stelle!!</string>
    <string name="badge_title_money_saver_level3">Risparmiatore – 3 stelle!!</string>
    <string name="badge_before_new_user">Appena ti iscrivi ed installi l’APP guadagni questo badge</string>
    <string name="badge_before_data_collector_level0">Quando inizi ad inserire i dati di rilevamento dei tuoi modi di trasporto, ottieni questo badge</string>
    <string name="badge_before_data_collector_level1">Quando hai registrato attività in una settimana per ogni giorno, otterrai questo badge.</string>
    <string name="badge_before_data_collector_level2">Quando hai registrato attività in due settimane per ogni giorno, otterrai questo badge.</string>
    <string name="badge_before_data_collector_level3">Quando hai registrato attività in un mese per ogni giorno, otterrai questo badge.</string>
    <string name="bike_lost_location_hint">Tap on the map or search for a location to indicate where you\'ve seen the bike the last time</string>
    <string name="quit">Quit</string>
    <string name="complete_your_profile">Complete your profile to start using the app...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation</string>
    <string name="please_select">Please select</string>
    <string name="prizes">Prizes</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="activate">Activate</string>
    <string name="alarm_none">None</string>
    <string name="alarm_buzz">Buzz</string>
    <string name="alarm_buzled">Buzz and led</string>
    <string name="alarm_led">Led</string>
    <string name="disconnect">Disconnect from sensor</string>
    <string name="alarm_ble_title">Activate alarm with mode </string>
</resources>