<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_record"
            android:icon="@drawable/footer_record_off"
            android:title="@string/title_record" />

        <item
            android:id="@+id/navigation_stats"
            android:icon="@drawable/ic_footer_stats_off"
            android:title="@string/title_stats"/>

        <item
            android:id="@+id/navigation_bikes"
            android:icon="@drawable/footer_bikes_off"
            android:title="@string/title_bikes" />
        <item
            android:id="@+id/navigation_badges"
            android:icon="@drawable/ic_badge"
            android:title="@string/badges" />
        <item
            android:id="@+id/navigation_prizes"
            android:icon="@drawable/ic_trophy"
            android:title="@string/prizes" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
        android:id="@+id/navigation_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/quit" />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout_menu_text"
            android:icon="@drawable/ic_disconnect"
            android:visible="true"
            />
    </group>
    <group
        android:id="@+id/menu_footer"
        android:checkableBehavior="none">
    <item
        android:id="@+id/menu_footer_version"
        android:enabled="false"

        android:title="@string/version" />
    </group>
</menu>